Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-58158

QDoc does not handle `using` declarations

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.9
    • 5.7.1
    • Build tools: qdoc
    • None
    • fbf6678e8ecfed05e14cab48f6cc6bb974d31063, 0c8e54905 (dev)

      Since C++11 we can replace old `typdef`s with `using` that has few advantages over the `typedef`. However it is not currently possible to document this with QDoc as \typedef command does not recognize it as valid typedef (even though from documentation point of view it basically is) and no other command I am aware of can be used for it. Either \typedef command should be expanded so it handles new style typedefs written with `using` or new command \using could be introduced.

        For Gerrit Dashboard: QTBUG-58158
        # Subject Branch Project Status CR V

            gbk Martin Smith (Qt)
            resurr3ction Michael Vlach
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes