qdoc: Enable documentation of type alias as typedef

clangqdoc now handles the type alias declaraction and provides
the \typealias command for documenting it. It is documented as
a typedef.

Task-number: QTBUG-58158
Change-Id: Iee0c8dea66026a89b3625b40b92b056cada893c1
Reviewed-by: Topi Reiniö <topi.reinio@qt.io>